modified command 'build' in package.json

--- a/src/admin/styles/blocks/switch.pcss
+++ b/src/admin/styles/blocks/switch.pcss
@@ -1,15 +1,21 @@
 .switch__menu {
   display: flex;
+
+  
 }
 
 .switch__item {
   margin-right: 60px;
-  border-bottom: 3px #383bcf solid;
   line-height: 60px;
   cursor: pointer;
 
   &:hover {
     color: #383bcf;
+    border-bottom: 3px #383bcf solid;
+  }
+
+  &:nth-child(2) {
+    border-bottom: 3px #383bcf solid;
   }
 
   &:last-child {
